[ITB-1356] Allow group steps to apply stopOnError semantics only for their child steps